# OMCompiler-3rdParty

./: .gitignore  CMakeLists.txt  oneTBB.txt
ColPack/: CMakeLists.txt
ColPack/inc/: ColPackHeaders.h
libffi/.cmake/: configure_options.cmake
